# PyXA-Code

./: COMPATIBLE_REPOS.md  INTEGRATION_PYXA_CLAWCODE.md  README.md  SYSTEM_REQUIREMENTS.md  pyproject.toml  requirements-mvp.txt
.github/workflows/: windows-tests.yml
docs/: WINDOWS_CI.md
pyxa_integration/: __init__.py  cli.py  errors.py  requirements.py
pyxa_integration/adapters/: __init__.py  ocr.py  screen_capture.py  windows_ui.py
pyxa_integration/config/: __init__.py  profiles.py
pyxa_integration/controller/: __init__.py  core.py  hotkey.py
pyxa_integration/core/: __init__.py  agent.py  models.py  schema_validator.py  structured_planner.py  tools.py
pyxa_integration/integrations/: __init__.py  claw_bridge.py
pyxa_integration/perception/: __init__.py  delta.py
pyxa_integration/planning/: __init__.py  tool_schema.py
pyxa_integration/providers/: __init__.py  openai_codex.py
pyxa_integration/research/: __init__.py  compatible_repos.py
pyxa_integration/utils/: __init__.py  logging.py  retry.py  telemetry.py
tests/: test_claw_bridge.py  test_cli.py  test_core.py  test_runtime.py  test_structured_planner.py  test_telemetry.py  test_windows_integration.py
