[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyxa-integration"
version = "0.1.0"
description = "PyXA integration runtime and tooling scaffold"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "PyXA Integration"}]
dependencies = []

[project.scripts]
pyxa-integration = "pyxa_integration.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "windows_integration: tests that require a Windows runtime and desktop APIs",
]
